# pyhwr

./: .gitignore  ExamenPDA(GabrielFerrer).py  dependencias.yml  pyproject.toml  readme.md  requirements.txt  setup.py
docs/: Components_doc.md  DataManagers_doc.md  Documentacion_API_DataManagers.md  Documentacion_API_MarkerManager copy.md  Documentacion_API_PreExperimentManager.md  Documentacion_API_SquareWidget.md  Documentacion_DataManagers.md  Documentacion_SessionManager.md  InitAPP_doc.md  LauncherApp_doc.md  MarkerManager_doc.md  PreExperimentManager_doc.md  README_DataManagers.md  README_MarkerManager.md  README_SessionManager.md  README_TabletMessenger.md  RunConfigurationApp_doc.md  SessionInfo_doc.md  SessionManager_doc.md  SquareWidget_doc.md  TabletMessenger_doc.md  readme.md
hwr.egg-info/: PKG-INFO  SOURCES.txt
hwr/managers/: SessionManager.py  TabletMessenger.py  __init__.py
hwr/utils/: SesionInfo.py  __init__.py
hwr/widgets/: __init__.py
pyhwr/: __init__.py
pyhwr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyhwr/managers/: APPManager.py  DataManagers.py  MarkerManager.py  PreExperimentManager.py  SessionManager.py  TabletMessenger.py  __init__.py
pyhwr/report/: ReportGenerator.py  context.json
pyhwr/report/output/: report.html
pyhwr/report/styles/: stylesheet.css
pyhwr/report/templates/: report_template.html
pyhwr/utils/: SesionInfo.py  SessionInfo.py  __init__.py  decorators.py
pyhwr/widgets/: InitAPP.py  LauncherAPP.py  LauncherApp.py  RunConfigurationApp.py  SquareWidget.py  StimuliWindow.py  StimuliWindow.ui  __init__.py  initAPP.ui  launcherAPP.ui  launcherApp.ui  runConfigurationApp.ui
pyhwr/widgets/images/: logo1.qrc  logo1_rc.py
pyhwr/widgets/styles/: initapp_styles.css  launcherapp_styles.css  runconfiguration_styles.css
test/: checking_timesync.py  ghiampmanager_test.py  lslmanager_test.py  markers_revision.py  pilot_tests_analysis.py  plotting_data.py  reading_xdf.py  session_cotroller.py  test_sueltos.py  timing_revision.py  trial_1.json  usbtesting.py
test/_descartados/: test_sueltos.py
test/data/: test.xdf
test/data/csv_data/: cue_durations_lsl.csv  trials_duration_lsl.csv  trials_duration_trigbox.csv
test/data/gtec_recordings/: full_setup_10.hdf5  full_setup_7.hdf5
test/data/pruebas_piloto/: readme.md
test/data/sueltos/: sub-P1_ses-S1_task-Default_run-001_test0.0.5.xdf  (+3 more)
(+83 files in other folders)
