[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhwr"
version = "2.0.0"
description = "Librería para experimentos de reconocimiento de escritura a mano alzada usando EEG"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }

authors = [
  { name = "Lucas Baldezzari", email = "lmbaldezzari@gmail.com" }
]

maintainers = [
  { name = "Lucas Baldezzari", email = "lmbaldezzari@gmail.com" }
]

dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "pylsl>=1.16",
  "PyQt5>=5.15",
  "keyboard>=0.13",
  "pyxdf>=1.17.0",
  "h5py>=3.10"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pyhwr", "pyhwr.*"]

[tool.setuptools.package-data]
pyhwr = ["py.typed"]
"pyhwr.widgets" = [
  "*.ui",
  "styles/*.css"
]

[project.urls]
Homepage = "https://github.com/lucasbaldezzari/pyhwr"
Repository = "https://github.com/lucasbaldezzari/pyhwr"